hellokube.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hellokube
  namespace: dev-app-ns
  labels:
    micro-service: hellokube 
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---

# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokube
  namespace: dev-app-ns
  labels:
    micro-service: hellokube
spec:
  replicas: 3
  template:
    metadata:
      labels:
        micro-service: hellokube
    spec:
      containers:
        - name: hellokube
          image: "paulbouwer/hello-kubernetes"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 768Mi
            requests:
              cpu: 100m
              memory: 512Mi           
          volumeMounts:
            - name: applogs
              mountPath: /var/logs
      volumes:
        - name: applogs
          hostPath:
            path: /appdata/disk1/logs
---

# Source: ingress-ext.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hellokube-ingress
  labels:
    micro-service: hellokube
spec:
  rules:
    - host: <DNS Name>
      http:
        paths:
        - backend:
            serviceName: hellokube
            servicePort: 8080
          path: /
